[package]
name = "millionaire-problem"
version = "0.0.0"
authors = ["Itzik Grossman <itzik@scrtlabs.com>"]
edition = "2021"
publish = false
description = "A simple secret contract that solves the millionaire's problem on Secret Network"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
chrono = "0.4.23"
cosmwasm-std = "1.0.0"
# cosmwasm-storage = "1.0.0"
# cw-storage-plus = "0.16"
schemars = "0.8.11"
serde = { version = "=1.0.147", default-features = false, features = [
  "derive",
] }
signature = "1.3.2"
syn = "1.0.103"
thiserror = "1.0"
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", branch = "master", default-features = false, features = [
  "utils",
  "storage",
  "serialization",
] }
secret-cosmwasm-std = "1.0.0"
secret-cosmwasm-storage = "1.0.0"
