[package]
name = "secret-ballot"
version = "0.0.0"
authors = ["tomosaigon"]
edition = "2021"
publish = false
description = "A simple secret ballot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
chrono = "0.4.23"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
secret-toolkit = { version = "0.6", default-features = false, features = ["utils", "storage", "serialization"] }
schemars = "0.8.11"
serde = { version = "=1.0.117", default-features = false, features = ["derive"] }
syn = "1.0.103"
thiserror = "1.0"
